Team,Blog PhotoUploader Added, Blog Detail Admin view Added

--- a/FinalProjectVR/wwwroot/web-cras-three.vercel.app/index-2.html
+++ b/FinalProjectVR/wwwroot/web-cras-three.vercel.app/index-2.html
@@ -24,7 +24,7 @@
 <body>
     <!-- Preloader -->
     <div id="preloader" class="preloader-content ">
-        <div class="loading-window">
+        <div class="loading-window">Ü
             <div class="car">
                 <div class="strike"></div>
                 <div class="strike strike2"></div>
